// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component should not render because there is no previous items nor next items 1`] = `""`;

exports[`Navigation component should render with (prev button disabled: false) and (next button disabled: false) 1`] = `
<ButtonGroup
  role="group"
  tag="div"
>
  <ForwardRef
    className="previousButton"
    id="prev-btn"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
  >
    keyboard_arrow_left
  </ForwardRef>
  <ForwardRef
    className="nextButton"
    id="next-btn"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
  >
    keyboard_arrow_right
  </ForwardRef>
</ButtonGroup>
`;

exports[`Navigation component should render with (prev button disabled: false) and (next button disabled: true) 1`] = `
<ButtonGroup
  role="group"
  tag="div"
>
  <ForwardRef
    className="previousButton"
    id="prev-btn"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
  >
    keyboard_arrow_left
  </ForwardRef>
  <ForwardRef
    className="nextButton"
    id="next-btn"
    intent="secondary"
    isDisabled={true}
    onClick={[Function]}
  >
    keyboard_arrow_right
  </ForwardRef>
</ButtonGroup>
`;

exports[`Navigation component should render with (prev button disabled: true) and (next button disabled: false) 1`] = `
<ButtonGroup
  role="group"
  tag="div"
>
  <ForwardRef
    className="previousButton"
    id="prev-btn"
    intent="secondary"
    isDisabled={true}
    onClick={[Function]}
  >
    keyboard_arrow_left
  </ForwardRef>
  <ForwardRef
    className="nextButton"
    id="next-btn"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
  >
    keyboard_arrow_right
  </ForwardRef>
</ButtonGroup>
`;
